name:               tagsoup-navigation
version:            0.0.1
license:            BSD3
license-file:       LICENCE
author:             Queensland Functional Programming Lab <oᴉ˙ldɟb@llǝʞsɐɥ>
maintainer:         Queensland Functional Programming Lab <oᴉ˙ldɟb@llǝʞsɐɥ>
copyright:          Copyright (c) 2018, Commonwealth Scientific and Industrial Research Organisation (CSIRO) ABN 41 687 119 230.
synopsis:           Tagsoup Navigation
category:           Text
description:
  <<http://i.imgur.com/uZnp9ke.png>>
  .
  Lenses and zipper for tagsoup
homepage:           https://github.com/qfpl/tagsoup-navigation
bug-reports:        https://github.com/qfpl/tagsoup-navigation
cabal-version:      >= 1.10
build-type:         Simple
extra-source-files: changelog.md

source-repository   head
  type:             git
  location:         git@github.com:qfpl/tagsoup-navigation

library
  default-language:
                    Haskell2010

  build-depends:
                    base >= 4.8 && < 5
                    , lens >= 4 && < 5
                    , semigroups >= 0.9 && < 0.19
                    , semigroupoids >= 5.2 && < 6
                    , tagsoup >= 0.13 && < 0.15
                    , tagsoup-selection >= 0.1 && < 0.2
                    , transformers >= 0.5 && < 0.6
                    , deriving-compat >= 0.5 && < 0.6
                    
  ghc-options:
                    -Wall

  default-extensions:
  
                    NoImplicitPrelude

  hs-source-dirs:
                    src

  exposed-modules:
                    Text.HTML.TagSoup.Navigation
                    Text.HTML.TagSoup.Navigation.Parse
                    Text.HTML.TagSoup.Navigation.Parse.Parse
                    Text.HTML.TagSoup.Navigation.Parse.ParseOptions
                    Text.HTML.TagSoup.Navigation.Render
                    Text.HTML.TagSoup.Navigation.Render.Render
                    Text.HTML.TagSoup.Navigation.Render.RenderOptions
                    Text.HTML.TagSoup.Navigation.Types
                    Text.HTML.TagSoup.Navigation.Types.Attribute
                    Text.HTML.TagSoup.Navigation.Types.Tag
                    Text.HTML.TagSoup.Navigation.Types.TagTree
                    Text.HTML.TagSoup.Navigation.Zipper
                    Text.HTML.TagSoup.Navigation.Zipper.Parent
                    Text.HTML.TagSoup.Navigation.Zipper.Zipper

test-suite          tests

  build-depends:      QuickCheck >=2.9.2 && <2.13
                    , base >=4.8 && < 5
                    , checkers >=0.4.6 && <0.5
                    , tagsoup-navigation
                    , lens >=4 && <4.18
                    , tasty >=0.11 && <1.2
                    , tasty-hunit >=0.9 && <0.11
                    , tasty-quickcheck >=0.8.4 && <0.11

  type:             
                    exitcode-stdio-1.0

  main-is:          
                    Tests.hs

  hs-source-dirs:   
                    test

  default-language: 
                    Haskell2010

  ghc-options:       
                    -Wall
